--- a/CFS_Phillip_DataProcessing.ipynb
+++ b/CFS_Phillip_DataProcessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +89,23 @@
    ],
    "source": [
     "print(len(NKM4), len(BcellM7), len(MonoM6), len(NKM13), len(NKM9))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ALG2', 'CLP1', 'DBNDD2', 'RGCC', 'PTGER4', 'PABPC4', 'PER1', 'EIF1', 'HSPA5', 'TAF13', 'FAM46C', 'TTC9C', 'RIPK1', 'FOS', 'ZNF674-AS1', 'TNFAIP3', 'PMAIP1', 'MIR22HG', 'RGS2', 'LARP4B', 'MTERFD2', 'SERTAD3', 'WDR53', 'TOE1', 'AC058791.2', 'RNMTL1', 'TSPYL2', 'ARL4A', 'CD83', 'BHLHE40', 'FAM177A1', 'SPRY1', 'IRF1', 'MOAP1', 'EIF1AD', 'EGR2', 'SYS1', 'BNIP1', 'YRDC', 'SRSF7', 'ZNF259', 'KPNA2', 'KANSL2', 'DHRS1', 'CSRNP1', 'ZFP36', 'B3GNT7', 'TNF', 'IRS2', 'TRAF4', 'OTUD1', 'LRRC59', 'AP006216.11', 'ZNF394', 'AVPI1', 'GRASP', 'SPATA2', 'CXCR4', 'CYTIP', 'AC005229.1', 'JUN', 'PIM3', 'DUSP10', 'PPP1R15A', 'C20orf111', 'PDE4B', 'NR4A2', 'DUSP5', 'SLAMF8', 'ATF3', 'DUSP1', 'SLC5A6', 'RP4-800J21.3', 'ZC3H12A', 'BTG2', 'TSPYL1', 'SIK1', 'TP53INP2', 'SPAG4', 'SBDS', 'MAP3K8', 'GRPEL1', 'JMJD6', 'DDIT3', 'MYLIP', 'SERTAD1', 'GADD45A', 'ISG20L2', 'MAFF', 'CTB-31O20.2', 'YPEL5', 'DNAJB1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(NKM4)"
    ]
   },
   {
