--- a/CFS_Phillip_DataProcessing.ipynb
+++ b/CFS_Phillip_DataProcessing.ipynb
@@ -76,7 +76,330 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ETV3',\n",
+       " 'ZNF350',\n",
+       " 'PIGA',\n",
+       " 'SLC2A3',\n",
+       " 'CBX3P2',\n",
+       " 'RLIM',\n",
+       " 'PRKAG2',\n",
+       " 'USP30',\n",
+       " 'TMEM183A',\n",
+       " 'CDYL',\n",
+       " 'AC018737.1',\n",
+       " 'FBXO36',\n",
+       " 'AMMECR1',\n",
+       " 'SPTY2D1',\n",
+       " 'NUDT15',\n",
+       " 'GIMAP7',\n",
+       " 'PLK1',\n",
+       " 'TRMT10C',\n",
+       " 'ZSCAN5A',\n",
+       " 'KB-1460A1.5',\n",
+       " 'BRIX1',\n",
+       " 'CDKN2AIP',\n",
+       " 'CTNNB1',\n",
+       " 'B3GNT2',\n",
+       " 'THUMPD1',\n",
+       " 'AMD1',\n",
+       " 'RBM4B',\n",
+       " 'SAMD8',\n",
+       " 'ZNF487P',\n",
+       " 'RP11-1114A5.4',\n",
+       " 'DDX24',\n",
+       " 'TWISTNB',\n",
+       " 'BAG3',\n",
+       " 'SOX4',\n",
+       " 'ING3',\n",
+       " 'BAG5',\n",
+       " 'FASTKD5',\n",
+       " 'DAXX',\n",
+       " 'ZNF92',\n",
+       " 'FBXW7',\n",
+       " 'MTHFSD',\n",
+       " 'BAG4',\n",
+       " 'ARL4C',\n",
+       " 'TWF1',\n",
+       " 'SIGLEC17P',\n",
+       " 'ZNF326',\n",
+       " 'C3orf38',\n",
+       " 'INSIG1',\n",
+       " 'SELK',\n",
+       " 'KIAA1328',\n",
+       " 'ZBTB9',\n",
+       " 'RNF121',\n",
+       " 'FOSL2',\n",
+       " 'PREB',\n",
+       " 'ARID4A',\n",
+       " 'ZNF786',\n",
+       " 'CXCR6',\n",
+       " 'WBP11',\n",
+       " 'SPRTN',\n",
+       " 'POLR3C',\n",
+       " 'ASTE1',\n",
+       " 'PRX',\n",
+       " 'ITPRIP',\n",
+       " 'IVD',\n",
+       " 'ULK4',\n",
+       " 'ABHD13',\n",
+       " 'EPC1',\n",
+       " 'PYGO2',\n",
+       " 'NIP7',\n",
+       " 'YOD1',\n",
+       " 'ZNF844',\n",
+       " 'WDR33',\n",
+       " 'C18orf25',\n",
+       " 'AC092171.4',\n",
+       " 'TMEM41A',\n",
+       " 'FAM46A',\n",
+       " 'SERTAD2',\n",
+       " 'KCTD21',\n",
+       " 'PIWIL4',\n",
+       " 'TOPORS',\n",
+       " 'FEM1B',\n",
+       " 'HIAT1',\n",
+       " 'ZNF669',\n",
+       " 'FBXO45',\n",
+       " 'XPC',\n",
+       " 'GMFB',\n",
+       " 'CDR2',\n",
+       " 'DUSP7',\n",
+       " 'EPT1',\n",
+       " 'ARL5B',\n",
+       " 'SH3BP5L',\n",
+       " 'SLC25A36',\n",
+       " 'SRSF4',\n",
+       " 'TTI2',\n",
+       " 'SC5DL',\n",
+       " 'HBP1',\n",
+       " 'TMEM177',\n",
+       " 'ELF2',\n",
+       " 'ANKRD49',\n",
+       " 'ZFAND5',\n",
+       " 'CPAMD8',\n",
+       " 'TAF3',\n",
+       " 'SERPINB8',\n",
+       " 'ZXDB',\n",
+       " 'GNE',\n",
+       " 'PDP1',\n",
+       " 'RP11-345J4.8',\n",
+       " 'LINC00324',\n",
+       " 'ECD',\n",
+       " 'ZNF184',\n",
+       " 'TRIM59',\n",
+       " 'FXC1',\n",
+       " 'PFN2',\n",
+       " 'NAF1',\n",
+       " 'CREBRF',\n",
+       " 'DDR1',\n",
+       " 'ZNF136',\n",
+       " 'TAP2',\n",
+       " 'MASTL',\n",
+       " 'RNF168',\n",
+       " 'FBXO33',\n",
+       " 'TSPYL4',\n",
+       " 'MON1A',\n",
+       " 'TCEB3',\n",
+       " 'CSTF2T',\n",
+       " 'ZDHHC16',\n",
+       " 'CDK8',\n",
+       " 'NAP1L5',\n",
+       " 'PDE4D',\n",
+       " 'HBS1L',\n",
+       " 'C16orf87',\n",
+       " 'BCLAF1',\n",
+       " 'MBD4',\n",
+       " 'PYROXD1',\n",
+       " 'TMEM104',\n",
+       " 'AARS',\n",
+       " 'CDK17',\n",
+       " 'PTP4A1',\n",
+       " 'WASL',\n",
+       " 'DDX23',\n",
+       " 'FNDC3A',\n",
+       " 'PHLDA1',\n",
+       " 'LYSMD1',\n",
+       " 'SMG8',\n",
+       " 'SEC24B',\n",
+       " 'LNX2',\n",
+       " 'ZNF800',\n",
+       " 'AC093627.10',\n",
+       " 'MFAP1',\n",
+       " 'MSL2',\n",
+       " 'JAG1',\n",
+       " 'KLF3',\n",
+       " 'BCL10',\n",
+       " 'CCNT1',\n",
+       " 'PDE12',\n",
+       " 'COPS2',\n",
+       " 'MCPH1',\n",
+       " 'HAUS3',\n",
+       " 'MAP4K3',\n",
+       " 'EAF1',\n",
+       " 'RP11-473I1.9',\n",
+       " 'IGIP',\n",
+       " 'GDAP1',\n",
+       " 'THAP8',\n",
+       " 'MED21',\n",
+       " 'FEM1C',\n",
+       " 'PHF23',\n",
+       " 'POLR3F',\n",
+       " 'PRMT2',\n",
+       " 'YPEL2',\n",
+       " 'ZNF134',\n",
+       " 'CCL28',\n",
+       " 'KLF9',\n",
+       " 'C2orf47',\n",
+       " 'PPP6R3',\n",
+       " 'CRNKL1',\n",
+       " 'TADA1',\n",
+       " 'RP11-18H21.1',\n",
+       " 'ADO',\n",
+       " 'DBF4',\n",
+       " 'AF131217.1',\n",
+       " 'ZFYVE21',\n",
+       " 'CTA-445C9.15',\n",
+       " 'PDHX',\n",
+       " 'FLVCR1-AS1',\n",
+       " 'TRA2B',\n",
+       " 'HDGFRP2',\n",
+       " 'RP11-4F5.2',\n",
+       " 'HYLS1',\n",
+       " 'CHMP7',\n",
+       " 'NFIL3',\n",
+       " 'PCED1B',\n",
+       " 'PLCL1',\n",
+       " 'OLFM2',\n",
+       " 'RP1-178F10.3',\n",
+       " 'ZKSCAN2',\n",
+       " 'TMEM187',\n",
+       " 'KRR1',\n",
+       " 'CTC-281B15.1',\n",
+       " 'YTHDF2',\n",
+       " 'ZNF16',\n",
+       " 'UBE2D4',\n",
+       " 'SLC30A1',\n",
+       " 'SLC48A1',\n",
+       " 'TRGC2',\n",
+       " 'KAT7',\n",
+       " 'COQ10B',\n",
+       " 'COG4',\n",
+       " 'ZNF57',\n",
+       " 'CEBPG',\n",
+       " 'MCCC1',\n",
+       " 'DNAJC25',\n",
+       " 'MBIP',\n",
+       " 'DDX20',\n",
+       " 'GIMAP5',\n",
+       " 'ZBTB10',\n",
+       " 'CTC-205M6.2',\n",
+       " 'COIL',\n",
+       " 'PAFAH1B2',\n",
+       " 'DCTN4',\n",
+       " 'IFIT5',\n",
+       " 'FUT7',\n",
+       " 'CTD-2547L24.3',\n",
+       " 'TSPY26P',\n",
+       " 'ENC1',\n",
+       " 'NR4A3',\n",
+       " 'DNAJB9',\n",
+       " 'L3MBTL4',\n",
+       " 'GRK4',\n",
+       " 'C3orf58',\n",
+       " 'RP11-395B7.7',\n",
+       " 'TAF5L',\n",
+       " 'DNTTIP2',\n",
+       " 'PAPD5',\n",
+       " 'TOB1',\n",
+       " 'NFS1',\n",
+       " 'CFL2',\n",
+       " 'ZNF416',\n",
+       " 'RNF157',\n",
+       " 'TXNDC15',\n",
+       " 'ARHGAP12',\n",
+       " 'SDE2',\n",
+       " 'ISCA1',\n",
+       " 'FBXO11',\n",
+       " 'UTP23',\n",
+       " 'RAB1A',\n",
+       " 'RNF217',\n",
+       " 'EXOC8',\n",
+       " 'TIPARP',\n",
+       " 'MAPKAPK5',\n",
+       " 'TRAF6',\n",
+       " 'FXR2',\n",
+       " 'ADPRM',\n",
+       " 'PPP1R15B',\n",
+       " 'SAFB',\n",
+       " 'C12orf66',\n",
+       " 'RAB37',\n",
+       " 'RBBP6',\n",
+       " 'BAG2',\n",
+       " 'PPP3CC',\n",
+       " 'ZNF256',\n",
+       " 'FAM160B1',\n",
+       " 'KBTBD2',\n",
+       " 'GIMAP1',\n",
+       " 'MPP5',\n",
+       " 'ZNF346',\n",
+       " 'ZNF295',\n",
+       " 'RDM1',\n",
+       " 'GRPEL2',\n",
+       " 'HCG27',\n",
+       " 'RBM48',\n",
+       " 'MRPL44',\n",
+       " 'COQ9',\n",
+       " 'AL161915.1',\n",
+       " 'ARMCX5',\n",
+       " 'RIOK3',\n",
+       " 'JOSD1',\n",
+       " 'NAT10',\n",
+       " 'SLC25A30',\n",
+       " 'MAPK1IP1L',\n",
+       " 'MIS12',\n",
+       " 'IRF4',\n",
+       " 'CHIC2',\n",
+       " 'R3HCC1L',\n",
+       " 'ZNF74',\n",
+       " 'RBM7',\n",
+       " 'ZBTB1',\n",
+       " 'SOCS6',\n",
+       " 'SLC16A6',\n",
+       " 'NANP',\n",
+       " 'STIM2',\n",
+       " 'VTI1A',\n",
+       " 'SHMT1',\n",
+       " 'LEMD3',\n",
+       " 'TP53',\n",
+       " 'ATG14',\n",
+       " 'SH2D3C',\n",
+       " 'FAM185A',\n",
+       " 'C19orf35',\n",
+       " 'RNF139',\n",
+       " 'UVRAG',\n",
+       " 'GZF1',\n",
+       " 'ZSWIM3',\n",
+       " 'ZNF639']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NKM9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +549,7 @@
        "(904, 13305)"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +573,7 @@
        "(13307, 13305)"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
